src/test/deca/context/valid/created/methode_extends_stage1.deca
//Description :
// Redef de methode
//
// Resultats :
//


class Premiere {
    int x = 2;
    protected float y = 3;
}

class Second extends Premiere {

  void blabla(int a){
  print(a);
  }

  Second getObject(){
  return this;
  }

}
